# tbank

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/: acquiring.md  authentication.md  business.md  business_cards.md  changelog.md  conf.py  core.md  delivery.md  deposit.md  direct_debit.md  dolyame.md  errors.md  files.md  index.md  installation.md  mails.md  merchant_acquiring.md  nominal_accounts.md  overnight.md  quickstart.md  reference.md  requirements.txt  salary.md  selfemployed.md  shopping.md  special_accounts.md  tax_consult.md  tid.md  ved.md  webhooks.md
tbank/: __init__.py
tbank/acquiring/: __init__.py  _endpoints.py  aio.py  auth.py  enums.py  errors.py  models.py  signing.py  sync.py  webhooks.py
tbank/business/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/business_cards/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/core/: auth.py  client.py  endpoint.py  errors.py  models.py  retry.py  signing.py  transport.py  urls.py
tbank/delivery/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/deposit/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/direct_debit/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/dolyame/: __init__.py  _endpoints.py  aio.py  auth.py  enums.py  errors.py  models.py  sync.py  webhooks.py
tbank/files/: __init__.py  _endpoints.py  aio.py  errors.py  models.py  sync.py
tbank/mails/: __init__.py  _endpoints.py  aio.py  errors.py  models.py  sync.py
tbank/merchant_acquiring/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/nominal_accounts/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/overnight/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/salary/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/selfemployed/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/shopping/: __init__.py  _endpoints.py  aio.py  errors.py  models.py  sync.py
tbank/special_accounts/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/tax_consult/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  sync.py
tbank/tid/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  oauth.py  sync.py
tbank/ved/: __init__.py  _endpoints.py  aio.py  enums.py  errors.py  models.py  signing.py  sync.py
tests/: test_extra_coverage.py
tests/acquiring/: test_altpay.py  test_auth.py  test_card_binding.py  test_client_async.py  test_client_sync.py  test_enums.py  test_errors.py  test_fiscalization.py  test_models.py  test_public_api.py  test_recurrent_cards.py  test_sbp_qr.py  test_signing.py  test_webhooks.py
tests/business/: test_business.py  test_invoices_sbp.py  test_payments.py
tests/business_cards/: test_business_cards.py
tests/core/: test_auth.py  test_client.py  test_errors.py  test_models.py  test_retry.py  (+1 more)
(+18 files in other folders)
