[tool.poetry]
name = "tbank"
version = "0.1.0"
description = "Асинхронный/синхронный Python SDK для API Т-Банка (эквайринг и открытый банк)."
authors = ["masasibata"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tbank" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=2.0.0"
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
coverage = ">=7.0"
pytest-cov = ">=5.0"
mypy = ">=1.10"
black = ">=24.0"
isort = ">=5.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
show_error_codes = true

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
known_first_party = ["tbank"]

[tool.coverage.run]
source = ["tbank"]
omit = ["*/tests/*"]
