[project]
name = "tbank"
version = "1.3.0"
description = "Асинхронный/синхронный Python SDK для API Т-Банка (эквайринг и открытый банк)."
authors = [{ name = "masasibata" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = [
    "tbank",
    "tinkoff",
    "acquiring",
    "эквайринг",
    "payments",
    "sbp",
    "fiscalization",
    "openapi",
    "async",
    "asyncio",
    "httpx",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/masasibata/tbank"
Repository = "https://github.com/masasibata/tbank"
Documentation = "https://tbank.readthedocs.io"

[tool.poetry]
packages = [{ include = "tbank" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
coverage = ">=7.0"
pytest-cov = ">=5.0"
mypy = ">=1.10"
black = ">=24.0"
isort = ">=5.13"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0"
furo = ">=2024.1"
myst-parser = ">=2.0"
autodoc-pydantic = ">=2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
known_first_party = ["tbank"]

[tool.coverage.run]
source = ["tbank"]
omit = ["*/tests/*"]
